# metamodel_version: 1.7.0
enum CRFItemDataTypeEnum
  {
    decimal
    float
    integer
    text
    date
    time
  }

enum ImplementationOptionEnum
  {
    Normalized
    Denormalized
  }

enum PackageTypeEnum
  {
    crf
  }

enum SelectionTypeEnum
  {
    Multiple
    Single
  }

type CodeList
  {
    submissionValue: String!
    conceptId: String
    href: Uri
  }

type CRFGroup
  {
    packageDate: Date!
    packageType: PackageTypeEnum!
    crfSpecializationId: String!
    shortName: String!
    standard: String!
    standardStartVersion: String!
    standardEndVersion: String
    implementationOption: ImplementationOptionEnum
    scenario: String
    categories: [String]
    domain: String
    biomedicalConceptId: String
    sdtmDatasetSpecializationId: String
    items: [CRFItem]!
  }

type CRFItem
  {
    name: String!
    variableName: String!
    dataElementConceptId: String
    questionText: String
    prompt: String
    completionInstructions: String
    orderNumber: Integer!
    mandatoryVariable: Boolean!
    dataType: CRFItemDataTypeEnum!
    length: Integer
    significantDigits: Integer
    displayHidden: Boolean
    derivedVariable: Boolean
    derivationDescription: String
    codelist: CodeList
    valueList: [ListValue]
    selectionType: SelectionTypeEnum
    prepopulatedValue: PrepopulatedValue
    sdtmTarget: SDTMTarget
  }

type ListValue
  {
    displayValue: String!
    value: String
  }

type PrepopulatedValue
  {
    value: String!
    conceptId: String
  }

type SDTMTarget
  {
    sdtmAnnotation: String
    sdtmVariables: [String]
    sdtmTargetMapping: String
  }

